<resources>
    <string name="app_name">ionu</string>
    <string name="action_settings">Settings</string>

    <string name="tab_text_alarms">Periods</string>
    <string name="tab_text_history">History</string>

    <string name="alarm_deleted_message">Period deleted</string>
    <string name="alarm_enabled_title">Enabled:</string>
    <string name="alarm_start_time_title">Start:</string>
    <string name="alarm_end_time_title">End:</string>
    <string name="alarm_custom_message_title">Notification message:</string>
    <string name="alarm_custom_message_hint">Add a custom message, be polite</string>

    <string name="card_text_info_ratio">Failures:</string>
    <string name="card_text_info_total_time">Total time:</string>
    <string name="card_text_info_best_week">Best week:</string>
    <string name="card_text_info_best_month">Best month:</string>
    <string name="card_text_info_current_streak">Current streak:</string>
    <string name="card_text_info_best_streak">Longest streak:</string>
    <string name="card_title_weekly_view">This week</string>
    <string name="card_title_monthly_view">This month</string>
    <string name="card_title_alltime_view">All-time</string>

    <string name="notification_content_alarms_active">Put your device away.</string>
    <string name="notification_content_period_violated">You unlocked your device during quiet time.</string>
    <string name="notification_time_remaining">Time to focus! Remaining time:</string>
    <string name="notification_title_alarms_active">Time to focus</string>
    <string name="notification_title_period_violated">Device was unlocked</string>
    <string name="notification_channel_description_main">Basic notifications, app will not work without these.</string>

    <string name="toast_alarm_time_invalid">Failed to set time, total time must not exceed 24h</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
